tests/fail/08_recursive_struct.lang
структура А {
    А поле;
}

функция main() : целое {
    вернуть 0;
}
